fix: 兼容模型列表收集写法